updated checks for previously run parameters

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -169,7 +169,7 @@ function update_params(val) {
    $("input[name='dagchainer_type']:nth(0)").attr("checked","checked");
    type= " genes";
   }
- display_dagchainer_settings([params[0],params[1],params[2]],type);
+ display_dagchainer_settings([params[1],params[2]],type);
  $('#c').val(params[11]);
  merge_select_check();
  depth_algo_check();
