--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -355,7 +355,7 @@ $(document).ready(function(){
   //set up jquery ajax
   $.ajaxSetup({
                 type: "GET",
-                url: "/matt_coge/OrganismView.pl", //url: "/CoGe/OrganismView.pl", // FIXME mdb 8/2/12, hardcoded path
+                url: "/CoGe/OrganismView.pl",
                 //dataType: "html",
                 cache: false,
         });
@@ -519,7 +519,11 @@ function export_tbl () {
    <TR><TD valign='top'>
     <table class="ui-widget-content ui-corner-all">
      <tr>
-       <td>Organism Name:<td><input type="text" size=15 value="<TMPL_VAR NAME="ORG_NAME">" name="org_name" id="org_name" style="font-style:italic" onFocus="search_bar('org_name')" onKeyUp='timing("org_name");'><span class='ui-button ui-corner-all' onClick="timing('org_name');"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+       <td>Organism Name:</td>
+       <td>
+        <input type="text" size=15 value="<TMPL_VAR NAME="ORG_NAME">" name="org_name" id="org_name" style="font-style:italic" onFocus="search_bar('org_name')" onKeyUp='timing("org_name");'><span class='ui-button ui-corner-all' onClick="timing('org_name');"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+       </td>
+     </tr>
      <tr>
        <td>Organism Description:<td><input type="text" size=15 value="<TMPL_VAR NAME="ORG_DESC">" name = "org_desc" id="org_desc" style="font-style:italic" onFocus="search_bar('org_desc')" onKeyUp='timing("org_desc");'><span class='ui-button ui-corner-all' onClick="timing('org_desc');"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
      <tr>
