--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -216,9 +216,10 @@ Gobe.handle_html= function (html) {
   $('#results_info').html(html);
   
   if ( !$('#results_info').dialog('isOpen') && html && !html.match(/multiple hits/) ) {
-
+   //$('#results_info').dialog('option', 'position', 'right');
+   var xpos = $(document).width - 500;
+   $('#results_info').dialog('option', 'position', ['right', 100]);
    $('#results_info').dialog('open');
-   $('#results_info').dialog('option', 'position', 'right');
   }
 };
 
