--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -175,11 +175,11 @@ function redefine(rc){
   $('#upstream').val(up);
   down = $('#downstream').val().replace(/,|\./g,"");
   $('#downstream').val(down);
-  if ($('(#addup').val()) {
+  if ($('#addup').val()) {
    up = $('#addup').val().replace(/,|\./g,"");
    $('#addup').val(up);
   }
-  if ($('(#adddown').val()) {
+  if ($('#adddown').val()) {
    down = $('#adddown').val().replace(/,|\./g,"");
    $('#adddown').val(down);
   }
