--- a/web/tmpl/OrganismView.tmpl
+++ b/web/tmpl/OrganismView.tmpl
@@ -377,10 +377,10 @@ function get_feat_gc(opts){
 
  $.ajax({
    data: {
+	  dsgid: dsgid[0],
 	  jquery_ajax: 1,
           fname: 'get_gc_for_feature_type',
 	  dsid: dsid,
-	  dsgid: dsgid,
 	  typeid: typeid,
 	  chr: chr,
 	  min: min,
