--- a/web/tmpl/ListView.tmpl
+++ b/web/tmpl/ListView.tmpl
@@ -328,7 +328,7 @@ function remove_list_annotation (opts) {
 }
 
 function wait_to_search (search_func, lid, search_term) {
-	if (search_term && search_term.length > 2) {
+	if (!search_term || search_term.length > 2) {
 		pageObj.search_term = search_term;
 		pageObj.lid = lid;
 			
@@ -560,6 +560,11 @@ Are you sure you want to permanently delete this list?<p>
 
 <TMPL_IF NAME=ADD_LIST_ITEMS>
 <SCRIPT language="JavaScript">
+search_genomes(<TMPL_VAR NAME=LID>, '');
+search_experiments(<TMPL_VAR NAME=LID>, '');
+search_features(<TMPL_VAR NAME=LID>, '');
+search_lists(<TMPL_VAR NAME=LID>, '');
+
 $(function() { $("#tabs").tabs({selected:0}); });
 </SCRIPT>
 
@@ -606,7 +611,6 @@ $(function() { $("#tabs").tabs({selected:0}); });
   <tr>
    <td>
     <select multiple id="select_genome_items" size="10" style="min-width:500; max-width: 500px;">
-     <option disabled='disabled'>No results, please enter a search term.</option>
     </select>
    </td>
   </tr>
@@ -630,7 +634,6 @@ $(function() { $("#tabs").tabs({selected:0}); });
   <tr>
    <td>
     <select multiple id="select_experiment_items" size="10" style="min-width:500; max-width: 500px;">
-     <option disabled='disabled'>No results, please enter a search term.</option>
     </select>
    </td>
   </tr>
@@ -654,7 +657,6 @@ $(function() { $("#tabs").tabs({selected:0}); });
   <tr>
    <td colspan='2'>
     <select multiple id="select_feature_items" size="10" style="min-width:500; max-width: 500px;">
-     <option disabled='disabled'>No results, please enter a search term.</option>
     </select>
    </td>
   </tr>
@@ -678,7 +680,6 @@ $(function() { $("#tabs").tabs({selected:0}); });
   <tr>
    <td colspan='2'>
     <select multiple id="select_list_items" size="10" style="min-width:500; max-width: 500px;">
-     <option disabled='disabled'>No results, please enter a search term.</option>
     </select>
    </td>
   </tr>
