--- a/web/tmpl/GroupView.tmpl
+++ b/web/tmpl/GroupView.tmpl
@@ -12,7 +12,7 @@ $(document).ready(function(){
 		cache: false,
 	});
 	//set_table();
-	$(".dialog_box").dialog({autoOpen: <TMPL_VAR NAME=EDIT_BOX_OPEN>, width: 500, maxWidth: 600});
+	$(".dialog_box").dialog({autoOpen: false, width: 500, maxWidth: 600});
 });
 
 //function set_table () { $('#group_table').tablesorter({widgets: ['zebra']}); }
