--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -16,6 +16,15 @@ $(document).ready(function(){
 		excludeColumns: [0,],
 	});
 */
+
+	// Create new case-insensitive "contains" selector function in jQuery
+	jQuery.expr[":"].icontains = jQuery.expr.createPseudo(function(arg) {
+	    return function( elem ) {
+	        return jQuery(elem).text().toUpperCase().indexOf(arg.toUpperCase()) >= 0;
+	    };
+	});
+
+	// Setup filter input
 	$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
 	$('#search_type').mouseup( function() { filter_rows( $('#search_bar').val() ); });
 	filter_rows();
@@ -61,8 +70,8 @@ function filter_rows (search_text){
 	if(! search_text) { $("#feat_table tr:hidden").show(0);}
 	else if (search_text.length >= 3) {
 		$("#feat_table_body tr:hidden").show(0);
-		if( $('#search_type').val() == 1 ) { $("#feat_table_body tr:not(:contains('"+search_text+"'))").hide(); }
-		else { $("#feat_table_body tr:contains('"+search_text+"')").hide(); }
+		if( $('#search_type').val() == 1 ) { $("#feat_table_body tr:not(:icontains('"+search_text+"'))").hide(); }
+		else { $("#feat_table_body tr:icontains('"+search_text+"')").hide(); }
 	}
 	$('#filter_count').html('Showing ' + $("#feat_table_body tr:visible").length + ' of ' + $("#feat_table_body tr").length + ' lists');
 }
