--- a/web/tmpl/Lists.tmpl
+++ b/web/tmpl/Lists.tmpl
@@ -29,8 +29,8 @@ function filter_rows (search_text){
 	if(!search_text) { $("#list_table_body tr:hidden").show(0);}
 	else if (search_text.length >= 3) {
 		$("#list_table_body tr:hidden").show(0);
-		if( $('#search_type').val() == 1 ) { $("#list_table_body tr:not(:contains('"+search_text+"'))").hide(); }
-		else { $("#list_table_body tr:contains('"+search_text+"')").hide(); }
+		if( $('#search_type').val() == 1 ) { $("#list_table_body tr:not(:icontains('"+search_text+"'))").hide(); }
+		else { $("#list_table_body tr:icontains('"+search_text+"')").hide(); }
 	}
 	$('#filter_count').html('Showing ' + $("#list_table_body tr:visible").length + ' of ' + $("#list_table_body tr").length + ' lists');
 }
@@ -123,6 +123,14 @@ Are you sure you want to permanently delete this list?<p>
 <TMPL_IF LIST_STUFF>
 <SCRIPT language="JavaScript">
 $(document).ready(function(){
+	// Create new case-insensitive "contains" selector function in jQuery
+	jQuery.expr[":"].icontains = jQuery.expr.createPseudo(function(arg) {
+	    return function( elem ) {
+	        return jQuery(elem).text().toUpperCase().indexOf(arg.toUpperCase()) >= 0;
+	    };
+	});
+
+	// Setup filter input
 	$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
 	$('#search_type').mouseup( function() { filter_rows( $('#search_bar').val() ); });
 	filter_rows();
