--- a/web/tmpl/ListView.tmpl
+++ b/web/tmpl/ListView.tmpl
@@ -12,8 +12,15 @@ $(document).ready(function(){
 		dataType: "html",
 		cache: false,
 	});
+	
+	set_table();
+	
 	$(".dialog_box").dialog({autoOpen: false});
 });
+
+function set_table () {
+	$('#list_contents_table').tablesorter({widgets: ['zebra']});
+}
 
 function show_dialog(id, title, html, width, height) {
 	var d = $('#'+id);
@@ -198,7 +205,7 @@ function run_get_list_contents(opts) {
 		var local_divid = divid;
 		return function (data) {
 			$('#'+local_divid).html(data);
-			//set_table();
+			set_table();
 		};
 	}; 
 
@@ -590,12 +597,14 @@ Are you sure you want to permanently delete this list?<p>
 
 <TMPL_IF NAME=ADD_LIST_ITEMS>
 <SCRIPT language="JavaScript">
-search_genomes(<TMPL_VAR NAME=LID>, '');
-search_experiments(<TMPL_VAR NAME=LID>, '');
-search_features(<TMPL_VAR NAME=LID>, '');
-search_lists(<TMPL_VAR NAME=LID>, '');
-
-$(function() { $("#tabs").tabs({selected:0}); });
+$(document).ready(function(){
+	$(function() { $("#tabs").tabs({selected:0}); });
+	
+	search_genomes(<TMPL_VAR NAME=LID>, '');
+	setTimeout(function() { search_experiments(<TMPL_VAR NAME=LID>, ''); }, 250);
+	setTimeout(function() { search_features(<TMPL_VAR NAME=LID>, ''); },    500);
+	setTimeout(function() { search_lists(<TMPL_VAR NAME=LID>, ''); },       750);
+});
 </SCRIPT>
 
 <div id='tabs' style='margin-top: 0.5em'>
